# meshrc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/meshrc/: __init__.py  __main__.py  app.py  client.py  messages.py
src/meshrc/screens/: channel.py  confirmation.py  settings.py
src/meshrc/widgets/: message_log.py  sidebar.py  tabbar.py
