[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshrc"
version = "0.1.0"
description = "A Textual-based TUI for MeshCore"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual",
    "meshcore>=2.2.3",
    "bleak",
    "pyserial",
    "requests",
    "pycryptodome",
]

[project.scripts]
meshrc = "meshrc.app:run"

[tool.hatch.build.targets.binary]

[tool.ruff]
target-version = "py314"
line-length = 88
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.isort]
known-first-party = ["meshrc"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
